--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><button class="Home">HOME</button></li>
                 <!-- <li><button class="About">ABOUT ME</button></li> -->
                 <li><button class="Library">LIBRARY</button></li>
+                <li><button class="Discover">DISCOVER</button></li>
                 <li><button class = "search-result"></button></li>
             </ul>
             <div class="search">
