--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
             <div class="album custom"> 
                 <div class="albumTitle">
-                    <h5>Your custom Album (coming soon)</h5> 
+                    <h5>Custom Album</h5> 
                     <button class="extent-button2">Show all</button>
                     <button class="back-button2">Back</button>
                 </div>
@@ -114,7 +114,6 @@
                     </ul>
                 </div>
             </div>
-
         </div>
 
         <div class="artists-boxx">
@@ -122,14 +121,32 @@
                 <h1 class="name-artist">name</h1>
             </div>
             <div class="artists-play">
-                <button class="play-album"><svg xmlns="http://www.w3.org/2000/svg" height="1.5em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#ffffff}</style><path d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80V432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"/></svg></buttono>
+                <button class="play-album"><svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#ffffff}</style><path d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80V432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"/></svg></buttono>    
             </div>
             <div class="playlist-artists">
-                <h1 class="subtitle">Popular</h1>
                 <ul id="song-list-artists"></ul>
             </div>
         </div>
         
+        <div class="creator-boxx">
+            <div class="introduce-album">
+                <div class="cover-img">
+                    <img>
+                </div>
+                <div class="cover-infor">
+                    <h1>nameAlbum</h1>
+                    <p>description</p>
+                    <h3>creator • n songs</h3>
+                </div>    
+            </div>
+            <div class="button-play-cover-box">
+                <button class="play-album-btn"><svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#ffffff}</style><path d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80V432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"/></svg></button>
+            </div>
+            <div class="playlist-creator">
+                <ul id="song-list-creator"></ul>
+            </div>
+        </div>
+
         <section class="container">
             <audio src="" id="audio"></audio>
             <div class="music-player">
