--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
 
         <div class="artists-boxx">
             <div class="introduce-artist">
+                <div class="cover-artist">
+                    <img>
+                </div>
                 <h1 class="name-artist">name</h1>
             </div>
             <div class="artists-play">
