--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
                         <img>
                         <h5>Title<div class="subtitle"></div></h5>
                     </li> 
-                    <div class="notfound"> No results found for your music </div>
                 </ul>
             </div>
         </div>
@@ -193,6 +192,7 @@
     <script src="write-data.js" type="module"></script>
     <script src="data-user.js"></script>
     <script src="data.js"></script>
+    <script src="data2.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
