--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </div>    
             </div>
             <div class="button-play-cover-box">
-                <button class="play-btn3 pause"><span></span><span></span></button>
+                <button class="play-album2"><svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 384 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#ffffff}</style><path d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80V432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"/></svg></button>
             </div>
             <div class="playlist-creator">
                 <ul id="song-list-creator"></ul>
