--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
     <main>
         <section class="index-banner"></section>
         <div class="box-mini-player">
-            <div class="mini-player">
+            <button class="mini-player">
                 <img>
                 <div>
                     <h1>name</h1>
                     <h1 class="mini-artist">artist</h1> 
                 </div>    
-            </div>
+            </button>
             <button class="play-btn2 pause">
                 <span></span>
                 <span></span>
@@ -150,7 +150,7 @@
 
         <section class="container">
             <audio src="" id="audio"></audio>
-                <div class="music-player">
+            <div class="music-player">
                 <div class="status"></div>
                 <div class="music-player-box">
                     <div class="disk-box">
