--- a/index.html
+++ b/index.html
@@ -113,6 +113,18 @@
                     </ul>
                 </div>
             </div>
+
+            <div class="album compilation"> 
+                <div class="albumTitle">
+                    <h5>Compilation Album</h5> 
+                    <button class="extent-button3">Show all</button>
+                    <button class="back-button3">Back</button>
+                </div>
+                <div class="scrollCompilation">
+                    <ul id="compilation-album">    
+                    </ul>
+                </div>
+            </div>
         </div>
 
         <div class="artists-boxx">
@@ -135,6 +147,7 @@
                     <img>
                 </div>
                 <div class="cover-infor">
+                    <h2>Public Album</h2>
                     <h1>nameAlbum</h1>
                     <p>description</p>
                     <h3>creator • n songs</h3>
