--- a/index.html
+++ b/index.html
@@ -172,7 +172,9 @@
                     </div>
                     <div class="panel">
                         <h1 class="music-name">song one</h1>
-                        <p class="artist-name">artist</p>
+                        <ul class="artistname-cover">
+                            <button class="artist-name">artist</button>
+                        </ul>
                         <div class="song-slider">
                             <input type="range" value="0" class="seek-bar">
                             <div class="timebox">
