--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
             <div class="album compilation"> 
                 <div class="albumTitle">
-                    <h5>Compilation Album</h5> 
+                    <h5>Popular Album</h5> 
                     <button class="extent-button3">Show all</button>
                     <button class="back-button3">Back</button>
                 </div>
